--- a/platzi-video/package.json
+++ b/platzi-video/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm-run-all -p server build:dev",
-    "build:dev": "webpack-dev-server --config ./webpack.dev.config.js",
+    "start": "webpack-dev-server --config ./webpack.dev.config.js",
     "server": "json-server ./initialState.json --port 3001",
     "build": "webpack --mode production",
+    "now-build": "npm run build",
     "server:test": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,11 +17,14 @@
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "express": "^4.17.1",
+    "md5": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
-    "react-router-dom": "^5.0.1"
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
